language level update / cleanup